staging/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devix-backend-staging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.staging.devix.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devix-backend-staging
                port:
                  number: 80
